--- a/style.css
+++ b/style.css
@@ -145,11 +145,12 @@ h2 {
 
 /* ############ costummizzation #################### */
 .inserttab{
-    margin: 12px;
-    margin-top: 20px;
+    padding: 20px;
     border-style: solid;
     border-width: 0,3px;
     border-color: gray;
+    width: 400px;
+
 }
  .inserttab label input{
     float: right;
