--- a/style.css
+++ b/style.css
@@ -144,21 +144,36 @@ h2 {
 
 
 /* ############ costummizzation #################### */
-.inserttab{
+.inserttab {
     padding: 20px;
     border-style: solid;
-    border-width: 0,3px;
+    border-width: 0, 3px;
     border-color: gray;
     width: 400px;
 
 }
- .inserttab label input{
+
+.inserttab label input {
     float: right;
 }
-.inserttab input{
+
+.inserttab input {
     float: right;
 }
-.inserttab label{
+
+.inserttab label {
     margin: 12px;
-    
+
+}
+
+#entrytime {
+    float: right;
+}
+
+#exittime {
+    float: right;
+}
+
+#greenpass {
+    float: right;
 }
