tenttivo di inserire form dinamico

--- a/style.css
+++ b/style.css
@@ -182,6 +182,6 @@ h2 {
     /* display: none; */
 }
 #insertedit{
-    /* display: none; */
+    display: none;
     background-color: darksalmon;
 }
