inseriti css per le ombre

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h2 {
     border-collapse: collapse;
     width: 100%;
     max-width: 100%;
-    white-space: nowrap;
+    white-space: pre-line;
     background-color: white;
 }
 
@@ -146,9 +146,9 @@ h2 {
 /* ############ costummizzation #################### */
 .inserttab {
     padding: 20px;
-    border-style: solid;
+    /* border-style: solid;
     border-width: 0, 3px;
-    border-color: gray;
+    border-color: gray; */
     width: 400px;
 
 }
@@ -178,10 +178,24 @@ h2 {
     float: right;
 }
 
-#areaedit{
+#areaedit {
     /* display: none; */
+    /*  padding: 10px;
+    box-shadow: 0px 35px 50px rgb(0 0 0 / 80%); */
 }
-#insertedit{
+
+#insertedit {
     display: none;
     background-color: darksalmon;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0px 35px 50px rgb(0 0 0 / 80%);
+}
+
+#insertnewdiv {
+    width: fit-content;
+    /* border: 1px solid; */
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 0px 35px 50px rgb(0 0 0 / 80%);
 }
