inserita modifica per implementazione barCode scanner

--- a/style.css
+++ b/style.css
@@ -203,3 +203,11 @@ h2 {
 #reachtableres {
     display: none;
 }
+
+/* ####################### per pagina insertAllows.html ########################## */
+body{
+   background-color: burlywood;
+
+}
+
+/* ######################################################################################## */
