--- a/style.css
+++ b/style.css
@@ -211,3 +211,7 @@ body{
 }
 
 /* ######################################################################################## */
+
+#inputkeyboard{
+    display: none;
+}
