--- a/style.css
+++ b/style.css
@@ -272,23 +272,92 @@ li a:hover {
 .evidenced {
     background-color: brown;
 }
-.formallowinput{
+
+.formallowinput {
     margin: 0 auto;
 }
 
-/* .title {
-   
-    background-color: #1d3144;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #2070e7;
-    padding: 12px;
-    width: max-content;
-    margin: 0 auto;
-    margin-top: 12px;
-    
-} */
+/* ####### login form ################ */
+#loginForm p {
+    font-size: 12px;
+    text-decoration: none;
+    color: #ffffff;
+}
 
-/* .titlecontainer {
-    text-align: center;
-} */
+#loginForm h1 {
+    font-size: 1.5em;
+    color: #525252;
+}
+
+.box {
+    background: #32a7501a;
+    width: 300px;
+    border-radius: 6px;
+    margin: 0 auto 0 auto;
+    padding: 12px;
+    padding-bottom: 56px;
+    border: #2980b9 4px solid;
+}
+
+#loginForm .email {
+    background: #ecf0f1;
+    border: #ccc 1px solid;
+    border-bottom: #ccc 2px solid;
+    padding: 8px;
+    width: 250px;
+    color: #AAAAAA;
+    margin-top: 10px;
+    font-size: 1em;
+    border-radius: 4px;
+}
+
+#loginForm .password {
+    border-radius: 4px;
+    background: #ecf0f1;
+    border: #ccc 1px solid;
+    padding: 8px;
+    width: 250px;
+    font-size: 1em;
+}
+
+.btn {
+    background: #2836769c;
+    width: 125px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+    border-radius: 4px;
+    border: #27ae60 1px solid;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    float: left;
+    margin-left: 16px;
+    font-weight: 800;
+    font-size: 0.8em;
+}
+
+.btn:hover {
+    background: #2c3bc0;
+}
+
+#btn2 {
+    float: left;
+    background: #3498db;
+    width: 125px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+    border-radius: 4px;
+    border: #2980b9 1px solid;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    font-weight: 800;
+    font-size: 0.8em;
+}
+
+#btn2:hover {
+    background: #3594D2;
+}
